# file_server

./: .gitignore  Cargo.toml  File Server.postman_collection.json  FileServer.toml  FileServer_example.toml  README.md  Rocket.toml  Tests.postman_collection.json  deploy_raspi.sh  docker-compose.yml  example_cert_options.conf  gen_certs.sh  openapi.json  run.sh  test_debug.db  test_debug2.db
.cargo/: config
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: rust.yml
.run/: run.run.xml  test.run.xml
docker/rabbit/: rabbit-run-initialization.sh
src/: db_migrations.rs  main.rs  util.rs
src/assets/: init.sql  temp__populatedb.sql
src/assets/migration/: v2.sql  v3.sql  v4.sql  v5.sql  v6.sql
src/config/: mod.rs
src/db/: file.rs  file_repository.rs  folder_repository.rs  metadata.rs  mod.rs
src/exif/: handler.rs  mod.rs  repository.rs  service.rs
src/exif/tests/: handler_tests.rs  mod.rs  service.rs
src/facade/: db.rs  file_facade.rs  folder_facade.rs  metadata_facade.rs  mod.rs
src/guard/: mod.rs
src/handler/: api.rs  api_handler.rs  file.rs  file_handler.rs  folder_handler.rs  mod.rs  tag_handler.rs
src/model/: api.rs  file_types.rs  mod.rs
src/model/db/: mod.rs
src/model/error/: file_errors.rs  folder_errors.rs  guard_errors.rs  metadata_errors.rs  mod.rs  preview_errors.rs  tag_errors.rs
src/model/guard/: auth.rs
src/model/repository/: mod.rs
src/model/request/: attributes.rs  file.rs  file_requests.rs  file_upload.rs  folder_requests.rs  mod.rs
src/model/response/: api_responses.rs  file_responses.rs  folder_responses.rs  mod.rs  (+1 more)
src/previews/: handler.rs  mod.rs  models.rs  preview_repository.rs  preview_service.rs  service.rs
src/queue/: mod.rs
src/repository/: file_repository.rs  folder_repository.rs  metadata_repository.rs  mod.rs  tag_repository.rs
src/service/: api.rs  api_service.rs  file.rs  file_service.rs  folder_service.rs  mod.rs  preview_service.rs  search_service.rs  tag_service.rs
src/tags/: handler.rs  mod.rs  models.rs  repository.rs  service.rs
src/test/: api_handler_tests.rs  api_tests.rs  file_handler_tests.rs  folder_handler_tests.rs  mod.rs
(+108 files in other folders)
