[package]
name = "file_server"
version = "2.5.2"
edition = "2021"
authors = ["Ploiu"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# core technologies
rocket = { version = "0.5", features = ["json", "tls"] }
rusqlite = { version = "0.31", features = ["bundled", "array", "chrono"] }
# text encoding
base64 = "0.22"
sha2 = "0.10"


# logging
log = "0.4"
fern = "0.6.2"

# misc
regex = "1.11"
lapin = "2.3"
config = { version = "0.14", features = ["toml"] }
serde = { version = "1.0.197", features = ["derive"] }
once_cell = "1.20.2"
async-global-executor = "2.4.1"
image = "0.25.1"
humantime = "2.1.0"
chrono = { version = "0.4.38", features = ["serde"] }
