[package]
name = "file_server"
version = "2.5.2"
edition = "2021"
authors = ["Ploiu"]

[dependencies]
rocket = { version = "0.5", features = ["json", "tls"] }
rusqlite = { version = "0.32.1", features = ["bundled", "array", "chrono"] }
base64 = "0.22"
sha2 = "0.10"
log = "0.4"
fern = "0.7.1"
regex = "1.11.1"
lapin = "2.3"
config = { version = "0.15.4", features = ["toml"] }
serde = { version = "1.0.217", features = ["derive"] }
once_cell = "1.20.2"
async-global-executor = "2.4.1"
image = "0.25.5"
humantime = "2.1.0"
chrono = { version = "0.4.39", features = ["serde"] }
itertools = "0.13.0"
# this is here because some deps use a vulnerable version
idna = "1.0.3"