[package]
name = "file_server"
version = "3.0.0"
edition = "2024"
authors = ["Ploiu"]

[dependencies]
rocket = { version = "0.5", features = ["json", "tls"] }
rusqlite = { version = "0.36", features = ["bundled", "array", "chrono"] }
base64 = "0.22"
sha2 = "0.10"
log = "0.4"
fern = "0.7"
regex = "1.11"
lapin = "3.0"
config = { version = "0.15", features = ["toml"] }
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.21"
async-global-executor = "3.1"
image = "0.25"
humantime = "2.2"
chrono = { version = "0.4", features = ["serde"] }
itertools = "0.14"
tar = "0.4"
nanoid = "0.4.0"
sysinfo = { version = "0.35", features = ["disk"] }
